--- a/src/stylesheets/meteors.css
+++ b/src/stylesheets/meteors.css
@@ -1,6 +1,7 @@
 .rock img{
     overflow: hidden;
     opacity: 0.8;
+    z-index: 1;
     }
     #one img{
         position: absolute;
